--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t akshay/frontendtest -f Dockerfile.dev
+  - docker build -t akshay/frontendtest -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true akshay/frontendtest npm run test -- --coverage
